--- a/client/index.html
+++ b/client/index.html
@@ -14,5 +14,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
-
+<script> console.log("sunny sharma");</script>
 </html>
