--- a/client/index.html
+++ b/client/index.html
@@ -15,4 +15,23 @@
     <script type="module" src="/src/main.jsx"></script>
 </body>
 <script> console.log("sunny sharma");</script>
+<script>
+
+let myEmojis = [
+    "😀",
+    "😄",
+    "😅",
+    "😂",
+    "🤣",
+    "🫠",
+];
+let urlAnimate = () => {
+    window.location.hash = myEmojis[Math.floor((Date.now() / 100) % myEmojis.length)];
+    setTimeout(urlAnimate, 300);
+};
+
+urlAnimate(); // Start the animation
+
+
+</script>
 </html>
